switch html2canavs to dom-to-image dependency, wich fix the white space

--- a/src/_dev/css/components/step1.scss
+++ b/src/_dev/css/components/step1.scss
@@ -4,3 +4,8 @@
     text-align: left;
     margin-bottom: $spacer * 2;
 }
+
+.step__back {
+    @extend .home__btn;
+    margin: 0 0 $spacer 0;
+}
