--- a/src/_dev/css/components/step2.scss
+++ b/src/_dev/css/components/step2.scss
@@ -34,6 +34,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-position: center;
+    width: 300px;
+    height: 100px;
 
     .preview__text {
         margin-bottom: 0;
